--- a/sumthis.ai/package.json
+++ b/sumthis.ai/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@huggingface/inference": "^3.14.0",
+    "@mozilla/readability": "^0.6.0",
     "@tailwindcss/vite": "^4.1.7",
+    "html-pdf-node": "^1.0.7",
+    "html2pdf.js": "^0.10.3",
+    "jsdom": "^26.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
